# distributed-core-systems

./: README.md  docker-compose.yml
.github/workflows/: ci.yaml
distributed-api-layer/: .dockerignore  Cargo.toml  Dockerfile  build.rs
distributed-api-layer/.github/workflows/: ci.yaml
distributed-api-layer/infra/: main.tf
distributed-api-layer/k8s/: deployment.yaml
distributed-api-layer/proto/: telemetry.proto
distributed-api-layer/src/: cache.rs  config.rs  events.rs  grpc.rs  http.rs  main.rs
loadtest/: autocannon-run.js  package.json
loadtest/k6/: telemetry.js
services/node-consumer/: Dockerfile  package-lock.json  package.json
services/node-consumer/proto/: telemetry.proto
services/node-consumer/src/: grpc-client.js  index.js
