[package]
name = "distributed-api-layer"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Ultra-lean, multi-threaded asynchronous Rust microservice for high-throughput JSON telemetry ingestion."
license = "MIT"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic = "0.12"
prost = "0.13"
futures = "0.3"
redis = { version = "0.27", features = [
    "tokio-comp",
    "connection-manager",
    "cluster-async",
] }
rskafka = "0.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[build-dependencies]
tonic-build = "0.12"

# Tuned for the <45MB operational footprint and high request throughput.
[profile.release]
opt-level = 3       # maximize runtime throughput
lto = true          # link-time optimization shrinks and speeds up the binary
codegen-units = 1   # better cross-module optimization
panic = "abort"     # drop unwinding tables -> smaller, leaner binary
strip = true        # strip debug symbols from the release artifact